Info sign spacing fixes in lomas guide. #433

--- a/css/components/user-guide-lomas.css
+++ b/css/components/user-guide-lomas.css
@@ -65,6 +65,7 @@
 }
 .user-guide-lomas-info > span {
 	display: table;
+	margin: 2px 3px 0 0;
 }
 
 .user-guide-lomas-form-components > form {
